updated main style to prevent it from covering the footer content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,11 @@
 html,
-body,
-main {
+body {
 	width: 100%;
 	height: 100%;
+}
+
+main {
+	width: 100%;
 }
 
 label {
